Naigation between posts and improved css.

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -213,3 +213,21 @@ pre {
     padding-top: 5px;
   }
 }
+
+.PageNavigation {
+  font-size: 14px;
+  display: block;
+  width: auto;
+  overflow: hidden;
+}
+
+.PageNavigation a {
+  display: block;
+  width: 50%;
+  float: left;
+  margin: 1em 0;
+}
+
+.PageNavigation .next {
+  text-align: right;
+}
