--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,4 +22,13 @@ layout: default
   {% if site.disqus.shortname %}
     {% include disqus_comments.html %}
   {% endif %}
+
+  <div class="PageNavigation">
+  {% if page.previous.url %}
+    <a class="prev" href="{{page.previous.url}}" title="{{page.previous.title}}">&laquo; Previous</a>
+  {% endif %}
+  {% if page.next.url %}
+    <a class="next" href="{{page.next.url}}" title="{{page.next.title}}">Next &raquo;</a>
+  {% endif %}
+</div>
 </article>
