--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -2,11 +2,18 @@
 
 // Define defaults for each variable.
 
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$base-font-family: "Open Sans", Helvetica, Arial, sans-serif !default;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
+
+$site-title-font-family: 'Maiden Orange';
+$site-title-color: #C70039;
+
+$post-title-font-family: "Oswald";
+$post-title-font-size: 40px;
+$post-title-color: #C70039;
 
 $spacing-unit:     30px !default;
 
