--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -11,17 +11,14 @@
 }
 
 .site-title {
-  @include relative-font-size(1.625);
+  @include relative-font-size(2.0);
+  font-family: $site-title-font-family;
   font-weight: 300;
   line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: -1px;
   margin-bottom: 0;
   float: left;
-
-  &,
-  &:visited {
-    color: $grey-color-dark;
-  }
+  color: $site-title-color;
 }
 
 .site-nav {
@@ -215,6 +212,9 @@
   @include relative-font-size(2.625);
   letter-spacing: -1px;
   line-height: 1;
+  font-size: $post-title-font-size;
+  font-family: $post-title-font-family;
+  color: $post-title-color;
 
   @include media-query($on-laptop) {
     @include relative-font-size(2.25);
