--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,11 +2,17 @@
   <div class="wrapper">
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
+        <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="fr_FR" data-type="horizontal" data-theme="light" data-vanity="htmfilho"><a class="LI-simple-link" href='https://be.linkedin.com/in/htmfilho?trk=profile-badge'>Hildeberto Mendonça</a></div>
+      </div>
+
+      <div class="footer-col footer-col-2">
+
+      </div>
+
+      <div class="footer-col footer-col-3">
         <ul class="contact-list">
           <li>
             {% if site.author %}
-              <p>&copy; {{ site.author | escape }}</p>
-
               {% if site.github_username %}
                 {% include icon-github.html username=site.github_username %}
               {% endif %}
@@ -17,13 +23,6 @@
             {% endif %}
           </li>
         </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-
-      </div>
-
-      <div class="footer-col footer-col-3">
         <p>{{ site.description | escape }}</p>
       </div>
     </div>
