Aligning menu items to the right

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav navbar-right">
           <li><a href="/">Blog</a></li>
           {% for path in page_paths %}
             {% assign my_page = site.pages | where: "path", path | first %}
