--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,10 @@
       <div class="footer-col footer-col-3">
         <ul class="contact-list">
           <li>
+            <span class="skype-button rounded" data-contact-id="live:me_7861" data-text="Chat With Me"></span>
+            <script src="https://swc.cdn.skype.com/sdk/v1/sdk.min.js"></script>
             {% if site.author %}
+              &nbsp;&nbsp;&nbsp;&nbsp;
               {% if site.github_username %}
                 {% include icon-github.html username=site.github_username %}
               {% endif %}
