Closed the tag nav.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,4 @@
 <header role="banner">
-
   <nav class="navbar navbar-default">
     <div class="wrapper">
       {% assign default_paths = site.pages | map: "path" %}
@@ -27,5 +26,5 @@
         </ul>
       </div>
     </div>
-  </div>
+  </nav>
 </header>
