--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header role="banner">
   <nav class="navbar navbar-default">
-    <div class="wrapper">
+    <div class="container">
       {% assign default_paths = site.pages | map: "path" %}
       {% assign page_paths = site.header_pages | default: default_paths %}
 
