--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,10 @@
   {% include head.html %}
 
   <body>
-
     {% include header.html %}
 
     <main class="page-content" aria-label="Content">
-      <div class="wrapper">
+      <div class="container">
         {{ content }}
       </div>
     </main>
@@ -19,5 +18,4 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
   </body>
-
 </html>
