--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,46 @@
 ---
 layout: default
 ---
-<article class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
-  </header>
+<div class="row">
+  <div class="col-md-8">
+    <article class="post">
+      <header class="post-header">
+        <h1 class="post-title">{{ page.title | escape }}</h1>
+      </header>
 
-  <div class="post-content">
-    {{ content }}
+      <div class="post-content">
+        {{ content }}
+      </div>
+    </article>
   </div>
+  <div class="col-md-4">
+    <h2>You May Also Visit</h2>
+    <hr style="border-width: 5px;" noshade>
+    <br>
+    <ul class="post-list">
+      {% for pg in site.pages offset:1 limit:15 %}
+        {% if pg.title != page.title %}
+          <li>
+            <h3>
+              <a class="post-link" href="{{ pg.url | prepend: site.baseurl }}">{{ pg.title }}</a>
+            </h3>
+          </li>
+        {% endif %}
+      {% endfor %}
+    </ul>
 
-</article>
+    <h2>Recent Posts</h2>
+    <hr style="border-width: 5px;" noshade>
+    <ul class="post-list">
+      {% for post in site.posts limit:5 %}
+        <li>
+          <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
+          <h3>
+            <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+          </h3>
+        </li>
+      {% endfor %}
+    </ul>
+  </div>
+</div>
