--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,32 +15,41 @@ layout: default
     </article>
   </div>
   <div class="col-md-4">
-    <h2>You May Also Visit</h2>
-    <hr style="border-width: 5px;" noshade>
-    <br>
-    <ul class="post-list">
-      {% for pg in site.pages offset:1 limit:15 %}
-        {% if pg.title != page.title %}
-          <li>
-            <h3>
-              <a class="post-link" href="{{ pg.url | prepend: site.baseurl }}">{{ pg.title }}</a>
-            </h3>
-          </li>
-        {% endif %}
-      {% endfor %}
-    </ul>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">You May Also Visit</h3>
+      </div>
+      <div class="panel-body">
+        <ul class="post-list">
+          {% for pg in site.pages offset:1 limit:15 %}
+            {% if pg.title != page.title %}
+              <li>
+                <h3>
+                  <a class="post-link" href="{{ pg.url | prepend: site.baseurl }}">{{ pg.title }}</a>
+                </h3>
+              </li>
+            {% endif %}
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
 
-    <h2>Recent Posts</h2>
-    <hr style="border-width: 5px;" noshade>
-    <ul class="post-list">
-      {% for post in site.posts limit:5 %}
-        <li>
-          <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
-          <h3>
-            <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-          </h3>
-        </li>
-      {% endfor %}
-    </ul>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Recent Posts</h3>
+      </div>
+      <div class="panel-body">
+        <ul class="post-list">
+          {% for post in site.posts limit:5 %}
+            <li>
+              <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
+              <h3>
+                <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+              </h3>
+            </li>
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
