--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,28 +27,34 @@ layout: default
 
       <div class="PageNavigation">
       {% if page.previous.url %}
-        <a class="prev" href="{{page.previous.url}}" title="{{page.previous.title}}">&laquo; Previous</a>
+        <a class="btn btn-default" href="{{page.previous.url}}" title="{{page.previous.title}}">&laquo; Previous</a>
       {% endif %}
       {% if page.next.url %}
-        <a class="next" href="{{page.next.url}}" title="{{page.next.title}}">Next &raquo;</a>
+        <a class="btn btn-default pull-right" href="{{page.next.url}}" title="{{page.next.title}}">Next &raquo;</a>
       {% endif %}
     </div>
     </article>
   </div>
   <div class="col-md-4">
-    <h2>Recent Posts</h2>
-    <hr style="border-width: 5px;" noshade>
-    <ul class="post-list">
-      {% for post in site.posts limit:15 %}
-        {% if post.title != page.title %}
-          <li>
-            <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
-            <h3>
-              <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-            </h3>
-          </li>
-        {% endif %}
-      {% endfor %}
-    </ul>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Recent Posts</h3>
+      </div>
+      <div class="panel-body">
+        <ul class="post-list">
+          {% for post in site.posts limit:15 %}
+            {% if post.title != page.title %}
+              <li>
+                <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
+                <h3>
+                  <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+                </h3>
+              </li>
+            {% endif %}
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
+<br>
