Added family photos to books and abour pages.

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -30,6 +30,7 @@ blockquote {
   line-height: 54px;
   letter-spacing: -1px;
   margin-bottom: 0;
+  margin-top: 3px;
   float: left;
   color: #14a3e5; }
 
