Put codewars in the footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,18 @@
 <footer class="site-footer">
   <div class="container">
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
+    <div class="row">
+      <div class="col-md-3">
         <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="fr_FR" data-type="horizontal" data-theme="light" data-vanity="htmfilho"><a class="LI-simple-link" href='https://be.linkedin.com/in/htmfilho?trk=profile-badge'>Hildeberto Mendonça</a></div>
       </div>
 
-      <div class="footer-col footer-col-2">
-        <p>{{ site.description | escape }}</p>
+      <div class="col-md-5">
+        <p style="text-align: center;">{{ site.description | escape }}</p>
       </div>
 
-      <div class="footer-col footer-col-3">
-
+      <div class="col-md-4">
+        <div class="codewars-panel">
+          <a href="https://www.codewars.com/users/htmfilho" target="_blank"><img src="https://www.codewars.com/users/htmfilho/badges/small"></a>
+        </div>
       </div>
     </div>
   </div>
