--- a/assets/custom.css
+++ b/assets/custom.css
@@ -268,3 +268,11 @@ blockquote {
     color: #008080; }
   .highlight .il {
     color: #099; }
+
+.codewars-panel {
+  background-color: black;
+  padding: 10px;
+  padding-bottom: 13px;
+  border: 1px solid #000000;
+  border-radius: 5px;
+}
