--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,9 @@
         <div class="codewars-panel">
           <a href="https://www.codewars.com/users/htmfilho" target="_blank"><img src="https://www.codewars.com/users/htmfilho/badges/small"></a>
         </div>
+
+        <br>
+        <iframe src="http://githubbadge.appspot.com/htmfilho?s=1&a=0" style="border: 0;height: 142px;width: 200px;overflow: hidden;" frameBorder="0"></iframe>
       </div>
     </div>
   </div>
