Changed link to codewars.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
 
       <div class="col-md-4">
         <div class="codewars-panel">
-          <a href="https://www.codewars.com/users/htmfilho" target="_blank"><img src="https://www.codewars.com/users/htmfilho/badges/small"></a>
+          <a href="www.codewars.com/r/Umhe_g" target="_blank"><img src="https://www.codewars.com/users/htmfilho/badges/small"></a>
         </div>
 
         <br>
