--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/">Blog</a></li>
+          <li><a href="/books">Books</a></li>
           {% for path in page_paths %}
             {% assign my_page = site.pages | where: "path", path | first %}
             {% if my_page.title %}
