--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,6 +15,12 @@
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <form class="navbar-form navbar-right" role="search" action="/search.html" method="get">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search" id="search-box" name="query">
+          </div>
+          <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+        </form>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/">Blog</a></li>
           <li><a href="/books">Books</a></li>
