--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <form class="navbar-form navbar-right" role="search" action="/search.html" method="get">
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search" id="search-box" name="query">
+            <input type="text" class="form-control" placeholder="Search posts..." id="search-box" name="query">
           </div>
           <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
         </form>
