--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,10 +27,10 @@ layout: default
 
       <div class="PageNavigation">
       {% if page.previous.url %}
-        <a class="btn btn-default" href="{{page.previous.url}}" title="{{page.previous.title}}">&laquo; Previous</a>
+        <a class="btn btn-default" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
       {% endif %}
       {% if page.next.url %}
-        <a class="btn btn-default pull-right" href="{{page.next.url}}" title="{{page.next.title}}">Next &raquo;</a>
+        <a class="btn btn-default pull-right" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
       {% endif %}
     </div>
     </article>
