Added stackoverflow badge.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,8 +10,12 @@
       </div>
 
       <div class="col-md-4">
-        <div class="codewars-panel">
-          <a href="www.codewars.com/r/Umhe_g" target="_blank"><img src="https://www.codewars.com/users/htmfilho/badges/small"></a>
+        <div class="code-panel">
+          <p><a href="www.codewars.com/r/Umhe_g" target="_blank"><img src="https://www.codewars.com/users/htmfilho/badges/small"></a></p>
+
+          <p><a href="https://stackoverflow.com/users/1027413/hildeberto-mendonca">
+          <img src="https://stackoverflow.com/users/flair/1027413.png?theme=dark" width="208" height="58" alt="profile for Hildeberto Mendonca at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Hildeberto Mendonca at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
+        </a></p>
         </div>
       </div>
     </div>
