--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/">Blog</a></li>
           <li><a href="/books">Books</a></li>
-          {% for path in page_paths %}
+          {% for path in page_paths reversed %}
             {% assign my_page = site.pages | where: "path", path | first %}
             {% if my_page.title %}
               <li><a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a></li>
