--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -123,6 +123,7 @@ blockquote {
   @include relative-font-size(1.125);
   letter-spacing: -1px;
   font-style: italic;
+  font-size: 16px;
 
   > :last-child {
     margin-bottom: 0;
