Organized the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3">
-        <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="fr_FR" data-type="horizontal" data-theme="light" data-vanity="htmfilho"><a class="LI-simple-link" href='https://be.linkedin.com/in/htmfilho?trk=profile-badge'>Hildeberto Mendonça</a></div>
+        <p><a href="https://stackoverflow.com/users/1027413/hildeberto-mendonca">
+        <img src="https://stackoverflow.com/users/flair/1027413.png?theme=dark" width="208" height="58" alt="profile for Hildeberto Mendonca at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Hildeberto Mendonca at Stack Overflow, Q&amp;A for professional and enthusiast programmers"></a></p>
       </div>
 
       <div class="col-md-5">
@@ -12,10 +13,6 @@
       <div class="col-md-4">
         <div class="code-panel">
           <p><a href="www.codewars.com/r/Umhe_g" target="_blank"><img src="https://www.codewars.com/users/htmfilho/badges/small"></a></p>
-
-          <p><a href="https://stackoverflow.com/users/1027413/hildeberto-mendonca">
-          <img src="https://stackoverflow.com/users/flair/1027413.png?theme=dark" width="208" height="58" alt="profile for Hildeberto Mendonca at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Hildeberto Mendonca at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
-        </a></p>
         </div>
       </div>
     </div>
