--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
       </div>
 
       <div class="col-md-9">
-        <p style="text-align: center;">{{ site.description | escape }}</p>
+        <p>{{ site.description | escape }}</p>
       </div>
     </div>
   </div>
